--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Advent of Code is an Advent calendar of small programming puzzles for a variety
 of skill sets and skill levels that can be solved in any programming language you like.
 
-Mark's note: For year 2020: Coding in Python and C++
+Mark's note: For year 2020: Coding in Python
